# doc-copilot-ai

./: .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
app/: drive_agent.py  main.py
credentials/: client_secret.json
